(fix) Make scrollbar draggable

--- a/src/css/App.scss
+++ b/src/css/App.scss
@@ -53,16 +53,19 @@ body {
 }
 
 ::-webkit-scrollbar {
-    width: 5px;
+    width: 7px;
 }
 
 ::-webkit-scrollbar-track {
     background: transparent;
+    margin-right: 10px;
 }
 
 ::-webkit-scrollbar-thumb {
     background: var(--accent-color);
+    border-right: 3px solid transparent;
     border-radius: 10px;
+    background-clip: padding-box;
 }
 
 .AppContainer {
